@@ -1,4 +1,3 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.024.
 use strict;
 use warnings;
 
@@ -17,7 +16,7 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.020000",
   "NAME" => "MooseX::Extended",
   "PREREQ_PM" => {
-    "B::Hooks::AtRuntime" => 3,
+    "B::Hooks::AtRuntime" => 7,
     "Carp" => 0,
     "Data::Printer" => 0,
     "Exporter" => 0,
@@ -32,8 +31,6 @@ my %WriteMakefileArgs = (
     "Moose::Util" => 0,
     "MooseX::Role::WarnOnConflict" => 0,
     "MooseX::StrictConstructor" => 0,
-    "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" => 0,
-    "Perl::Critic::Policy::Moose::RequireMakeImmutable" => 0,
     "Ref::Util" => 0,
     "Storable" => 0,
     "Type::Library" => 0,
@@ -56,7 +53,6 @@ my %WriteMakefileArgs = (
     "DateTime" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "IO::Async::Loop" => 0,
     "List::Util" => 0,
     "Scalar::Util" => 0,
     "Test::Builder" => 0,
@@ -65,7 +61,7 @@ my %WriteMakefileArgs = (
     "base" => 0,
     "lib" => 0
   },
-  "VERSION" => "0.25",
+  "VERSION" => "0.26",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -73,7 +69,7 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "B::Hooks::AtRuntime" => 3,
+  "B::Hooks::AtRuntime" => 7,
   "Capture::Tiny" => 0,
   "Carp" => 0,
   "Data::Printer" => 0,
@@ -81,7 +77,6 @@ my %FallbackPrereqs = (
   "Exporter" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
-  "IO::Async::Loop" => 0,
   "Import::Into" => 0,
   "List::Util" => 0,
   "Module::Load" => 0,
@@ -94,8 +89,6 @@ my %FallbackPrereqs = (
   "Moose::Util" => 0,
   "MooseX::Role::WarnOnConflict" => 0,
   "MooseX::StrictConstructor" => 0,
-  "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" => 0,
-  "Perl::Critic::Policy::Moose::RequireMakeImmutable" => 0,
   "Ref::Util" => 0,
   "Scalar::Util" => 0,
   "Storable" => 0,
