@@ -14,8 +14,14 @@ managed_versions                                 = 1
 regenerate                                       = LICENSE
 regenerate                                       = Makefile.PL
 regenerate                                       = META.json
+regenerate                                       = cpanfile
 BumpVersionAfterRelease.munge_makefile_pl        = 0
 Regenerate::AfterReleasers.plugin                = ReadmeAnyFromPod
+
+[CopyFilesFromBuild::Filtered]
+copy = Makefile.PL
+copy = cpanfile
+copy = LICENSE
 
 [GithubMeta]
 issues                                           = 1
@@ -23,6 +29,7 @@ user                                             = Ovid
 homepage                                         = https://github.com/Ovid/moosex-extreme
 
 [AutoPrereqs]
+skip = IO::Async::Loop
 
 ; Windows test failures were caused by having version of Type::Tiny and
 ; friends which were released in 2014!
@@ -30,14 +37,21 @@ homepage                                         = https://github.com/Ovid/moose
 Type::Tiny          = 1.012004                            ; minimum safe version
 B::Hooks::AtRuntime = 7                                   ; minimum safe version
 true                = 1.0.2                               ; minimum safe version
+
+[Prereqs / DevelopRequires ]
+-phase = develop
+-relationship = requires
 Perl::Critic::Policy::Moose::ProhibitMultipleWiths = 0    ; for xt tests
 Perl::Critic::Policy::Moose::RequireMakeImmutable  = 0    ; for xt tests
 
 [Prereqs / RuntimeSuggests]
+-relationship = suggests
 Syntax::Keyword::MultiSub = 0.02
 Future::AsyncAwait        = 0.58
 
 [Prereqs / TestRecommends]
+-phase = test
+-relationship = recommends
 IO::Async::Loop = 0
 Data::Printer   = 0   ; useful while testing if debugging is enabled
 
